# tempuz-scoreboard

./: TENNIS_DATA_INTEGRATION.md  doubles-match.json  match.json  package.json  plan.md  singles-match.json  tailwind.config.js
public/: composite-scoreboard.html  scoreboard.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: Cargo.toml  lib.rs  main.rs  state.rs  state.rs.backup  state_sync.rs  storage.rs
src-tauri/src/commands/: court_data_sync.rs  images.rs  live_data.rs  mod.rs  monitor.rs  scoreboard.rs  state_commands.rs  storage.rs  storage_commands.rs  tennis_processor.rs  videos.rs
src/components/Designer/: PropertyPanel.tsx
src/components/Designer/Canvas/: AdaptiveTeamDisplay.tsx  AlignmentGuides.tsx  DesignCanvas.tsx  DraggableComponent.tsx  ImageComponent.tsx  ResizeHandles.tsx  TeamNames.tsx  TennisPlayerNameDisplay.tsx  VideoComponent.tsx
src/components/ui/: ColorPicker.tsx  CompositeScoreboardInstanceManager.tsx  CompositeScoreboardManager.tsx  CreateScoreboardDialog.tsx  ImageManager.tsx  LiveDataConfigDialog.tsx  LiveDataManager.tsx  LoadScoreboardDialog.tsx  ManualTennisScoring.tsx  MultipleScoreboardManager.tsx  SaveScoreboardDialog.tsx  ScoreboardManager.tsx  TennisApiConnectionButton.tsx  VideoManager.tsx  badge.tsx  button.tsx  card.tsx  input.tsx
src/hooks/: useTennisWorkerData.ts
src/lib/: tauri.ts
src/services/: courtDataSync.ts  rustTennisProcessor.ts
src/stores/: tauriStore.ts  useAppStore.ts  useCanvasStore.ts  useImageStore.ts  useLiveDataStore.ts  useManualTennisStore.ts  useScoreboardStore.ts  useVideoStore.ts
src/types/: canvas.ts  compositeScoreboard.ts  scoreboard.ts  tauri.ts  tennisProcessor.ts
src/utils/: alignment.ts  canvas.ts  cn.ts  courtDataStorage.ts  performanceTest.ts
src/workers/: README.md  TennisWorkerManager.ts  tennisDataWorker.ts
