[package]
name = "tempuz-scoreboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "tempuz-scoreboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tempuz_scoreboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["codegen"] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.224", features = ["derive"] }
tauri = { version = "2.8.5", features = ["tray-icon", "devtools"] }
tauri-plugin-window-state = "2.0.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-shell = "2.3.1"
tauri-plugin-opener = "2.5.0"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5.7"
lazy_static = "1.4"
zip = "5.1.1"
thiserror = "2.0.16"

