[dependencies]
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.7.0", features = [ "window-all", "tray-icon", "dialog-all", "webview-all", "devtools", "unstable", "macos-private-api"] }
tauri-plugin-window-state = "2.4.0"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"
tauri-plugin-opener = "2.4.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
lazy_static = "1.5.0"